[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
iyes_perf_ui = "0.2.3"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
